istio/gateway/L7.HTTP.gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway  # Istio 기본 ingress gateway 사용
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.com"
